--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 :root {
     --serif: 'Playfair Display', serif;;
     --sans-serif: 'Inter', sans-serif;
-    --title: "Sansita Swashed", system-ui;
-    --gap: 2rem; /* 16px = 1rem */
-    --desktop-gap: 1.25rem; /* 20px = 1.25rem */
+    --title: 'Space Mono', monospace;
+    --gap: 2rem;
     --yellow: #FFB200;
     --black: #000000;
     --gray: #DEE2E6;
@@ -53,7 +52,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0 !important;
 }
 
-/* Change the color of hamburger menu (I was helped by ChatGPT to change the svg color, sorry...) */
+/* Change the color of hamburger menu (I was helped by ChatGPT since I couldn't figure out how to change the svg color, sorry...) */
 .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='%23ffb200' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
@@ -70,7 +69,11 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 0.5rem;
 }
 
-/* Banner */
+/* Flickity Banner */
+.main-carousel {
+    position: relative;
+}
+
 .carousel-cell {
     width: 100%;
     height: 80vh;
@@ -82,25 +85,30 @@ h1, h2, h3, h4, h5, h6 {
     object-fit: cover;
 }
 
-/* position dots up a bit */
+/* Type JS */
+.banner-typing {
+    font-family: var(--title);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 1.8rem;
+    text-align: center;
+}
+
+/* Position dots up a bit */
 .flickity-page-dots {
     bottom: 22px;
 }
 
-/* dots are lines */
+/* Dots are lines */
 .flickity-page-dots .dot {
     height: 4px;
     width: 40px;
     margin: 0;
     border-radius: 0;
 }
-
-/* GSAP Scroll Animation */
-/* 간단한 초기 스타일 */
-.fade-up {
-    opacity: 0;
-    transform: translateY(40px);
-  }
 
 /* About */
 .about .container-fluid {
@@ -110,6 +118,45 @@ h1, h2, h3, h4, h5, h6 {
 .about-img img {
     width: 100%;
     height: 100%;
+}
+
+/* Filp Card from W3C */
+.flip-card {
+    width: 18.75rem;
+    height: 20rem;
+    perspective: 1000px;
+}
+  
+.flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+  
+.flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+}
+  
+.flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+.flip-card-front img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.flip-card-back {
+    background-color: var(--white);
+    color: var(--black);
+    transform: rotateY(180deg);
 }
 
 /* Gallery */
@@ -170,6 +217,7 @@ input.form-control {
 
 /* Desktop */
 /* Used media query for desktop version with 992px since Bootstrap's lg breakpoint is 992px */
+/* Since I used BootStrap CSS, I didn't include custom css here a lot */
 @media screen and (min-width: 992px) {
 
     /* Base */
@@ -187,6 +235,11 @@ input.form-control {
     /* Banner */
     .site-banner .carousel-cell {
         height: 75vh;
+    }
+
+    /* Type JS */
+    .banner-typing {
+        font-size: 2rem;
     }
 
 }
